Fixed the not hidden overflow

--- a/webclient/src/views/view/view-view.scss
+++ b/webclient/src/views/view/view-view.scss
@@ -320,7 +320,6 @@
         overflow: hidden;
         position: relative;
         margin-bottom: 6px;
-        cursor: pointer;
 
         > div {  // Image source label
             position: absolute;
@@ -342,6 +341,7 @@
     #roomfinder-map-img {
         width: 100%;
         display: block;
+        cursor: pointer;
     }
 
     #roomfinder-map-select > label {
@@ -349,9 +349,7 @@
     }
 
     #roomfinderModal-container {
-        overflow: hidden;
-        position: relative;
-        margin-bottom: 6px;
+        padding-bottom: 4em;
     }
 
     #modalRoomfinder-map-cross {
@@ -362,7 +360,6 @@
 
     #modalRoomfinder-map-img {
         width: 100%;
-        display: block;
     }
 
     .accordion-body {
